set max with for content container/re-adjusted responsive issues for front-page sections

--- a/themes/bix/sass/_general.scss
+++ b/themes/bix/sass/_general.scss
@@ -22,4 +22,14 @@
 
 .quotes-text-orange{
     color: $color__orange;
-  }
+ }
+ 
+@media #{$tablet} {
+ .container{
+ 	max-width: 1280px;
+	display: flex;
+	flex-flow: column nowrap;
+	align-items: center;
+	margin: 0 auto;
+ }
+}
