--- a/themes/bix/sass/front-sections/_front-section-two.scss
+++ b/themes/bix/sass/front-sections/_front-section-two.scss
@@ -83,6 +83,7 @@
     align-items:center;
     margin-bottom: 60px;
     margin-top: 60px;
+    width: 100%;
     .quote-img{
       width: 50%;
       height: 300px;
@@ -111,6 +112,7 @@
     justify-content: space-between;
     align-items:center;
     margin-bottom: 60px;
+    width: 100%;
     .quote-img-2{
       width: 50%;
       height: 300px;
