--- a/themes/bix/sass/front-sections/_front-section-four.scss
+++ b/themes/bix/sass/front-sections/_front-section-four.scss
@@ -88,9 +88,10 @@
     margin-top: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     margin-bottom: 60px;
     margin-top: -15px;
+    width: 96%;
     .book-logo-wrapper{
       order: 2;
       max-width: 300px;
@@ -100,6 +101,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
+      margin: 0 auto;
     }
     .book-logo{
       max-width: 200px;
@@ -107,7 +109,7 @@
     }
     .book-summary{
       width: 50%;
-      padding:0px 0px;
+      padding:0px 10px;
       order:1;
       display: flex;
       flex-direction: column;
@@ -115,7 +117,7 @@
       align-items: center;
       div{
         max-width: 800px;
-        padding:0 10px;
+        padding:0;
       }
       p{
         font-size: .8rem;
@@ -128,17 +130,19 @@
 @media #{$tablet-large} {
   .home-book{
     margin-bottom: 80px;
+    width: 100%;
     .book-logo-wrapper{
       max-width: 400px;
       width: 30%;
     }
     .book-logo{
-      max-width: 300px;
+      max-width: 280px;
     }
     .book-summary{
-      width: 60%;
+      width: 70%;
       div{
         max-width: 800px;
+        padding:0 0px;
       }
       p{
         font-size: 1rem;
@@ -155,12 +159,14 @@
       order: 2;
       max-width: 410px;
       width: 30%;
+      margin: 0;
+      padding:0;
     }
     .book-logo{
-      max-width: 310px;
+      max-width: 360px;
     }
     .book-summary{
-      width: 65%;
+      width: 60%;
       div{
         max-width: 820px;
       }
