--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -773,6 +773,17 @@ object {
 .quotes-text-orange {
   color: #F9AC31; }
 
+@media (min-width: 600px) {
+  .container {
+    max-width: 1280px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-flow: column nowrap;
+        flex-flow: column nowrap;
+    -ms-flex-align: center;
+        align-items: center;
+    margin: 0 auto; } }
+
 /*--------------------------------------------------------------
 # Page Templates
 --------------------------------------------------------------*/
@@ -1146,7 +1157,8 @@ strong {
     -ms-flex-align: center;
         align-items: center;
     margin-bottom: 60px;
-    margin-top: 60px; }
+    margin-top: 60px;
+    width: 100%; }
     .quote-wrapper-front .quote-img {
       width: 50%;
       height: 300px; }
@@ -1174,7 +1186,8 @@ strong {
         justify-content: space-between;
     -ms-flex-align: center;
         align-items: center;
-    margin-bottom: 60px; }
+    margin-bottom: 60px;
+    width: 100%; }
     .quote-wrapper-front-2 .quote-img-2 {
       width: 50%;
       height: 300px;
@@ -1371,10 +1384,11 @@ strong {
     display: flex;
     -ms-flex-direction: row;
         flex-direction: row;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
     margin-bottom: 60px;
-    margin-top: -15px; }
+    margin-top: -15px;
+    width: 96%; }
     .home-book .book-logo-wrapper {
       -ms-flex-order: 2;
           order: 2;
@@ -1388,13 +1402,14 @@ strong {
       -ms-flex-pack: center;
           justify-content: center;
       -ms-flex-align: center;
-          align-items: center; }
+          align-items: center;
+      margin: 0 auto; }
     .home-book .book-logo {
       max-width: 200px;
       margin-top: 0; }
     .home-book .book-summary {
       width: 50%;
-      padding: 0px 0px;
+      padding: 0px 10px;
       -ms-flex-order: 1;
           order: 1;
       display: -ms-flexbox;
@@ -1407,23 +1422,25 @@ strong {
           align-items: center; }
       .home-book .book-summary div {
         max-width: 800px;
-        padding: 0 10px; }
+        padding: 0; }
       .home-book .book-summary p {
         font-size: .8rem;
         line-height: 20px; } }
 
 @media (min-width: 900px) {
   .home-book {
-    margin-bottom: 80px; }
+    margin-bottom: 80px;
+    width: 100%; }
     .home-book .book-logo-wrapper {
       max-width: 400px;
       width: 30%; }
     .home-book .book-logo {
-      max-width: 300px; }
+      max-width: 280px; }
     .home-book .book-summary {
-      width: 60%; }
+      width: 70%; }
       .home-book .book-summary div {
-        max-width: 800px; }
+        max-width: 800px;
+        padding: 0 0px; }
       .home-book .book-summary p {
         font-size: 1rem;
         line-height: 25px; } }
@@ -1435,11 +1452,13 @@ strong {
       -ms-flex-order: 2;
           order: 2;
       max-width: 410px;
-      width: 30%; }
+      width: 30%;
+      margin: 0;
+      padding: 0; }
     .home-book .book-logo {
-      max-width: 310px; }
+      max-width: 360px; }
     .home-book .book-summary {
-      width: 65%; }
+      width: 60%; }
       .home-book .book-summary div {
         max-width: 820px; }
       .home-book .book-summary .bix-book-title {
