front-page responsive fixes

--- a/themes/bix/sass/_variables.scss
+++ b/themes/bix/sass/_variables.scss
@@ -35,6 +35,7 @@ $font-size__header: 36px;
 $tablet: "(min-width: 600px)";
 $tablet-large: "(min-width: 900px)";
 $desktop: "(min-width: 1024px)";
+$desktop-large: "(min-width: 1260px)";
 
 //Boiler Plate Styles
 $font__code: Monaco, Consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
