bix-book page mobile styling top section

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -66,5 +66,6 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "page-templates";
 @import "about";
 @import "front-page";
+@import "bix-book";
 @import "footer";
 @import "media-queries";
