--- a/themes/bix/style.css
+++ b/themes/bix/style.css
@@ -1596,6 +1596,48 @@ strong {
         line-height: 28px;
         max-width: none; } }
 
+.bix-book-banner {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center; }
+  .bix-book-banner .site-logo {
+    display: none; }
+  .bix-book-banner .bix-book-title {
+    width: 100%;
+    color: #F9AC31;
+    border-bottom: solid 2px #F9AC31;
+    border-top: solid 2px #F9AC31;
+    font-size: 1rem;
+    letter-spacing: 1px;
+    padding: 3px 0;
+    width: 200px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 500; }
+
+.book-section1 {
+  background: linear-gradient(rgba(255, 255, 255, 0.45), rgba(255, 255, 255, 0.45)), url(../../images/bix-book-banner.png) no-repeat 20% top;
+  background-size: cover;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-direction: column;
+      flex-direction: column;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 100px 0; }
+  .book-section1 .book-section1-inside {
+    padding: 5px 20px;
+    background-color: rgba(230, 230, 230, 0.7); }
+    .book-section1 .book-section1-inside p {
+      font-weight: 300; }
+
 .footer-content-area {
   background-color: #444444;
   max-width: 1240px;
