--- a/themes/bix/sass/front-sections/_front-section-four.scss
+++ b/themes/bix/sass/front-sections/_front-section-four.scss
@@ -10,6 +10,7 @@
     max-width: 300px;
     height: auto;
   }
+
   .home-book-text{
     text-align: center;
   }
@@ -50,6 +51,7 @@
   }
   .book-summary{
      padding:20px 40px;
+     max-width: 100%;
    div{
       max-width: 500px;
       display: flex;
@@ -74,6 +76,8 @@
       font-size: 1rem;
       line-height: 25px;
       margin-bottom:0px;
+      display: block;
+      max-width: 100%;
     }
     .btn-discover{
       @include btn;
@@ -108,7 +112,7 @@
       margin-top:0;
     }
     .book-summary{
-      width: 50%;
+      max-width: 50%;
       padding:0px 10px;
       order:1;
       display: flex;
@@ -116,12 +120,15 @@
       justify-content: center;
       align-items: center;
       div{
-        max-width: 800px;
+        max-width: 300px;
+        height: auto;
         padding:0;
       }
       p{
         font-size: .8rem;
         line-height: 20px;
+        display: block;
+        max-width: 100%;
       }  
     }
   }
@@ -139,9 +146,9 @@
       max-width: 260px;
     }
     .book-summary{
-      width: 70%;
+      max-width: 70%;
       div{
-        max-width: 800px;
+        max-width: 500px;
         padding:0 0px;
       }
       p{
@@ -166,9 +173,9 @@
       max-width: 300px;
     }
     .book-summary{
-      width: 65%;
+      max-width: 65%;
       div{
-        max-width: 820px;
+        max-width: 700px;
       }
       .bix-book-title{
         font-size: 1.8rem;
