--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -137,7 +137,64 @@
   }
 }
 
+.book-purchase{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 0;
+    margin-top: 0;
 
+  .book-purchase-info{
+    padding: 5px 20px;
+    display: block;
+    max-width: 100%;
+    p{
+      font-weight: 300;
+      display: block;
+      max-width: 100%;  
+    }
+    .book-buy{
+      font-weight: 700;
+    }
+    .book-buy-light{
+      font-weight: 300;
+      font-size: .8rem;
+      text-align: center;
+      letter-spacing: 1.5px;
+      span{
+        color:$color__blue;
+      }
+    }
+    .fa-cc-paypal{
+      color: #253b80;
+      font-size: 2.5rem;
+      top: 20px;
+      vertical-align: text-middle;
+      position:relative;
+      top:10px;
+    }
+
+    .donate-now{
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    .book-buy-light{
+      margin-bottom:0;
+      letter-spacing: 1px;
+    }
+
+    }
+    .btn-donate{
+      @include btn;
+      padding: 10px 30px;
+      display: block;
+      text-align: center;
+      width: 230px;
+    }
+  }
+}
 
 
 
