--- a/themes/bix/sass/_mixins.scss
+++ b/themes/bix/sass/_mixins.scss
@@ -31,6 +31,6 @@
   border: solid #fff 2px;
   border-radius: 30px;
   background-color: $color__blue;
-  font-weight: bold;
+  font-weight: 500;
   font-size: 1.1rem;
 }
