max witdh to 100%

--- a/themes/bix/sass/_footer.scss
+++ b/themes/bix/sass/_footer.scss
@@ -1,6 +1,6 @@
 .footer-content-area {
 	background-color: #444444;
-  max-width: 1240px;
+  max-width: 100%;
   text-align: center;
   overflow: hidden;
 }
