--- a/themes/bix/sass/_bix-book.scss
+++ b/themes/bix/sass/_bix-book.scss
@@ -37,17 +37,20 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 100px 0;
-
-	.book-section1-inside{
-		padding: 5px 20px;
-		background-color:rgba(230,230,230,.7);
-    display: block;
-    max-width: 100%;
-  	p{
-  		font-weight: 300;  
-  	}
-	}
+    padding: 100px 0;	
+  }
+.book-section1-inside{
+  padding: 5px 20px;
+  background-color:rgba(230,230,230,.7);
+  display: block;
+  max-width: 100%;
+  p{
+    font-weight: 300;  
+  }
+}
+//desktop styling hidden for mobile
+.ribbon, .ribbon-heading{
+  display: none;
 }
 
 .main-carousel{
@@ -103,6 +106,18 @@
       font-weight: 300;
       list-style-type: none;
     }
+    li:before {   
+            content: "";  
+            border-color: transparent $color__orange;  
+            border-style: solid;  
+            border-width: 0.35em 0 0.35em 0.45em;  
+            display: block;  
+            height: 0;  
+            width: 0;  
+            left: -1em;  
+            top: 1.1em;  
+            position: relative;  
+        } 
     p{
       font-weight: 300;
     }
@@ -152,7 +167,8 @@
     p{
       font-weight: 300;
       display: block;
-      max-width: 100%;  
+      max-width: 100%; 
+      text-align: center; 
     }
     .book-buy{
       font-weight: 700;
@@ -198,6 +214,67 @@
 
 
 
+@media #{$tablet}{
+  .bix-book-banner{
+    background: url(../../images/bix-book-banner.png) no-repeat center left;
+    background-size: cover;
+    height: 70vh;
+    overflow: hidden;
+    position: relative;
+    .site-logo{
+      display: unset;
+      max-width: 250px;
+    } 
+    .the-bix-book-title{
+      color:#fff;
+      border-bottom: solid 2px #fff;
+      border-top: solid 2px #fff;
+      font-size: 1.5rem;
+      padding:10px 0;
+      width: 250px;
+      text-transform: capitalize;
+      font-weight: 500;
+    }
+  }
+
+  .book-section1{
+    background: none;
+    padding: 0px 0;  
+  }
+
+  .book-section1-inside{
+    background-color:#fff;
+  }
+}
+
+@media #{$tablet-large}{
+  
+  .book-section1{
+    border: solid 1px $color__gray;
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 100px;
+    margin-top: 50px;
+    position: relative;
+    .ribbon{
+      display: unset;
+      position: absolute;
+      top: 35px;
+      left: -45px;
+    }
+    .ribbon-heading{
+      display: unset;
+      position: absolute;
+      top: 23px;
+      left: 23px;
+      font-weight: 500;
+      font-size: 1.5rem;
+      text-transform: uppercase;
+    }
+  }
+
+
+}
 
 
 
