--- a/themes/bix/sass/_navigation.scss
+++ b/themes/bix/sass/_navigation.scss
@@ -277,7 +277,6 @@
 		background: rgba(255,255,255,1);
 		border-bottom: solid 1px rgba(0,0,0,0.2);
 		z-index: 1;
-		transition: 1s;
 	}
 
 	.main-navigation {
@@ -371,13 +370,23 @@
 	}
 
 	.transparent-background {
-		transition: 1s;
 		background: rgba(255,255,255,0.95);
 	}
 }
 	
 
-
+.desktop-nav-wrapper-home {
+	position: relative;
+	height: 0;
+	.desktop-nav-container {
+		position: absolute;
+		top: 100vh;
+	}
+	.desktop-nav-fixed {
+		position: fixed;
+		top: 0;
+	}
+}
 
 // breakpoints
 
