fix merge conflict on main.js

--- a/themes/bix/sass/style.scss
+++ b/themes/bix/sass/style.scss
@@ -70,3 +70,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "bix-book";
 @import "footer";
 @import "media-queries";
+@import "front-sections/front-model";
